# holdfast

./: .gitignore  CHANGELOG.md  README.md  proposal.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/plans/: v0.2.0-release.md
.github/workflows/: publish.yml
skills/evolve/: SKILL.md
skills/holdfast/: SKILL.md
skills/review/: SKILL.md
skills/status/: SKILL.md
skills/track/: SKILL.md
src/holdfast/: __init__.py  __main__.py  contract.py  detect.py  evidence.py  evolve.py  extract.py  status.py  store.py  validate.py  version.py
templates/claude-code-review/: contract.yaml  detection.yaml  invariants.yaml
templates/claude-code-review/evolvable/: approach.md
templates/claude-code-review/frozen/: standards.md
templates/claude-test-generation/: contract.yaml  detection.yaml
templates/claude-test-generation/evolvable/: approach.md
templates/claude-test-generation/frozen/: standards.md
tests/: conftest.py  test_contract.py  test_detect.py  test_evidence.py  test_evolve.py  test_extract.py  test_integration.py  test_validate.py  test_version.py
